# ESP32_temp_monitor

./: README.md
ESP32_temp_monitor/: pyproject.toml
ESP32_temp_monitor/esp32_temp_monitor/: main.py
