[tool.poetry]
name = "esp32-temp-monitor"
version = "0.1.0"
description = ""
authors = ["sgonzr12 <sgonzr12@estudiantes.unileon.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
temp-monitor = 'esp32_temp_monitor.main:main'